--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,15 @@
 {
   "dependencies": {
     "com.unity.2d.pixel-perfect": "5.1.0",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "3.1.3",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.ide.rider": "3.0.36",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.render-pipelines.universal": "14.0.12",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.7",
     "com.unity.ugui": "1.0.0",
